Tue Mar  9 13:11:43 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* notify.c (do_mach_notify_dead_name): Don't check against
	P->p_msgport anymore.
	* msg.c (message_port_dead): Delete function.
	(S_proc_setmsgport): Don't request a dead-name notification
	anymore. 
	(S_proc_getmsgport): Check to see if P->p_msgport is dead before
	returning it.
	* mgt.c (S_proc_reassign): Only use mach_port_deallocate to
	release P->msgport.
	(process_has_exited): Likewise.
	* proc.h (message_port_dead): Delete prototype.

	* mgt.c (S_proc_reassign): It's not necessary to re-request the
	task-death notification; we've moved both the task right and the
	proc port that gets the notification, so delete that.
	
	* mgt.c (S_proc_reassign): Use mach_port_destroy instead of
	mach_port_deallocate to release P->p_msgport, for the same reasons
	as the changes below.

Sun Mar  7 18:19:07 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* mgt.c (process_has_exited): Use mach_port_destroy instead of
 	mach_port_deallocate to release P->p_msgport.
	(complete_exit): Likewise for P->p_task.  
	These changes eliminate a race; we are destroying the receiver of
 	the dead-name notifications on these ports, but if that means we
 	lose a notification, then the ref-count on the name will get
 	incremented and we can't re-decrement it since we never hear the
 	notification.

1999-03-06  Mark Kettenis  <kettenis@gnu.org>

	* notify.c (do_mach_notify_dead_name): Deallocate reference to
	DEADPORT.

Sat Feb 20 06:26:17 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* stubs.c (send_signal): Typo in comment.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* cpu-types.c: Test with #ifdef for CPU_TYPE_I486, CPU_TYPE_PENTIUM,
	CPU_TYPE_PENTIUMPRO, CPU_TYPE_POWERPC, since not all <mach/machine.h>
	versions have them.

Tue Sep 16 15:26:04 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* host.c (hostid, hostname, hostnamelen): Delete variables.
	(S_proc_sethostid, S_proc_gethostid, S_proc_sethostname,