@@ -1,3 +1,15 @@
+1999-03-11  Mark Kettenis  <kettenis@gnu.org>
+
+	* notify.c (do_mach_notify_dead_name): Remove unnecessary braces.
+	
+	* msg.c (S_proc_setmsgport): Remove unused variable FOO.
+	(S_proc_getmsgport): Only check if the message port is still alive
+	if it is not MACH_PORT_NULL.  Use mach_port_type instead of
+	mach_port_get_refs to check if the port is dead.
+	
+	* mgt.c (S_proc_reassign): Use mach_port_destroy to release the
+	old task port.
+	
 Tue Mar  9 13:11:43 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* notify.c (do_mach_notify_dead_name): Don't check against
